force-app/main/default/objects/numm__CostAccountingValues__c/numm__CostAccountingValues__c.object-meta.xml
<CustomObject>
    <description>Objet des valeurs analytiques</description>
    <label>Valeur Analytique</label>
    <nameField>
        <label>Valeur analytique</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Valeurs Analytiques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>