force-app/main/default/objects/numm__CostAccountingValues__c/fields/numm__Commercial__c.field-meta.xml
<CustomField>
    <fullName>numm__Commercial__c</fullName>
    <label>Commercial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial 1</fullName>
            </value>
            <value>
                <fullName>Commercial 2</fullName>
            </value>
            <value>
                <fullName>Commercial 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>