force-app/main/default/objects/numm__CostAccountingValues__c/fields/numm__Date_blocage__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_blocage__c</fullName>
    <description>Date à laquelle cette valeur ne doit plus être utilisée</description>
    <label>Date de blocage</label>
    <type>Date</type>
</CustomField>