force-app/main/default/objects/numm__CostAccountingValues__c/fields/numm__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>numm__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Code Externe</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>