force-app/main/default/objects/numm__CostAccountingValues__c/fields/numm__IdAxis__c.field-meta.xml
<CustomField>
    <fullName>numm__IdAxis__c</fullName>
    <inlineHelpText>Sélectionner l&#39;axe analytique</inlineHelpText>
    <label>Axe analytique</label>
    <referenceTo>numm__CostAccounting__c</referenceTo>
    <relationshipLabel>Valeurs Analytiques</relationshipLabel>
    <relationshipName>Tables_Analytiques</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>