force-app/main/default/objects/numm__CostAccountingValues__c/fields/numm__Lot_entites__c.field-meta.xml
<CustomField>
    <fullName>numm__Lot_entites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>La valeur analytique est attribuée a un ensemble d&#39;entité</inlineHelpText>
    <label>Lot entités</label>
    <referenceTo>numm__Lot_entite__c</referenceTo>
    <relationshipLabel>Valeurs Analytiques</relationshipLabel>
    <relationshipName>Valeurs_Analytiques</relationshipName>
    <type>Lookup</type>
</CustomField>